Fix quests page width on mobile

--- a/src/app/private/css/quests.component.css
+++ b/src/app/private/css/quests.component.css
@@ -43,7 +43,6 @@ div.containBar {
 }
 
 .progression-quest-container>div {
-  width: 12vw;
   height: 60px;
   position: relative;
   margin-right: 5px;
